--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,8 @@
 /tmp
 .DS_Store
 .env
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
